--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
-</head>
-<body>
-    <h1>Rock, Paper, Scissors</h1>
-    <h2>Let's play!</h2>
-    <p>Player 1 choose {{choice_1}}</p>
-    <p>Player 2 choose {{choice_2}}</p>
-    <h2>And the winner is:</h2>
-    <p>{{ result }}</p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{%  block content %}
+
+<h2>Let's play!</h2>
+    <section>
+        <p>Player 1 choose <b>{{choice_1}}</b></p>
+        <p>Player 2 choose <b>{{choice_2}}</b></p>
+        <h2>And the winner is:</h2>
+        <p><b>{{ result }}</b></p>
+    </section>
+    
+
+    {% endblock %}
