--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -13,5 +13,8 @@
     <form action="/game">
         <input type="submit" value="Play Game" />
     </form>
+    <form action="/play">
+        <input type="submit" value="Play Computer"/>
+    </form>
     
 {% endblock %}
