--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,7 +29,7 @@ body {
     text-align: center;
     color: blue;
    
-   background-color: lightgray;
+   background-color: white;
     
   }
   
