--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    font-family: 'Josefin Sans', sans-serif;
   }
   
   header {
@@ -46,15 +47,19 @@ body {
       color: black;
   }
 
- form > input{
-    background-image: linear-gradient(lightgray, blue);
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+ 
+
+ input {
+  background-image: linear-gradient(lightgray, blue);
+  border: lightgray;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
  }
+
+
 
  
