--- a/templates/play.html
+++ b/templates/play.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+ {% extends "base.html" %}
 
 {%  block content %}
 
@@ -6,15 +6,21 @@
 
 <form action="/play" method="POST">
     <label for="player_name">Player Name</label>
-    <input type="text" name="player_name" id="player_name">
+    <input type="text" onfocus="this.value=''" name="player_name" id="player_name">
     <label for="player_choice">Player Choice</label>
-    <input type="text" name="player_choice" id="player_choice">
+    <input list="player_choice" type="text" onfocus="this.value=''" name="player_choice">
+        <datalist id="player_choice">
+            <option value="rock">
+            <option value="paper">
+            <option value="scissors">   
+         </datalist>
+    <!-- <input type="text" onfocus="this.value=''" name="player_choice" id="player_choice"> -->
     <input type="submit" value="Play">
 
 </form>
 
 <section>
-    <p><b>{{ result }}</b></p>
+    <p><b>{{ result }} {{ error }}</b></p>
 </section>
 
     
